# fitness-app

./: .gitignore  .trivyignore  README.md  issuers.yaml
backend/: .env  .env.example  Dockerfile  conftest.py  docker-entrypoint.sh  pyproject.toml  requirements.txt
backend/apps/accounts/: README.md  admin.py  exceptions.py  models.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_equipment_musclegroup_user_is_onboarded_and_more.py  0003_userprofile_intelligence_fields.py
backend/apps/analytics/: README.md  urls.py  views.py
backend/apps/exercises/: README.md  admin.py  models.py  permissions.py  serializers.py  views.py
backend/apps/exercises/migrations/: 0001_initial.py
backend/apps/intelligence/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/intelligence/integrations/: api_ninjas.py  http_client.py  usda.py
backend/apps/intelligence/migrations/: 0001_initial.py  0002_rename_food_log_entries_user_date_idx_food_log_en_user_id_a3466d_idx.py
backend/apps/intelligence/repositories/: food_log.py  workout_plan.py
backend/apps/intelligence/services/: goal_engine.py  progress_analytics.py  (+1 more)
backend/apps/workouts/: README.md  admin.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/config/: README.md  urls.py
backend/config/settings/: base.py  dev.py  prod.py
backend/tests/: README.md  factories.py  test_analytics.py  test_auth.py  test_commands.py  test_exercises.py  test_goal_engine.py  test_models.py  test_onboarding.py  test_utils.py  test_workouts.py
k8s/: app.yaml  (+3 more)
(+104 files in other folders)
